infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: "argocd.192-168-10-42.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-external
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: "cd.jpto.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts: 
    - cd.jpto.dev
    secretName: argocd-jptodev-tls-production
